# bluementa

./: README.md
server/: .env.example  .gitignore  Cargo.toml
server/migrations/2023-03-28-135535_create_users/: up.sql
server/src/: lib.rs  main.rs  schema.rs
server/src/models/: users.rs
